--- a/module_b/build.gradle
+++ b/module_b/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.library'
 apply from: '../quality.gradle'
 apply plugin: 'com.palantir.jacoco-coverage'
 apply plugin: 'com.palantir.jacoco-full-report'
+apply plugin: 'jacoco-android'
 
 android {
     compileSdkVersion 28
@@ -22,6 +23,9 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+        debug{
+            testCoverageEnabled true
         }
     }
 
